--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -6,7 +6,7 @@
             src="https://kit.fontawesome.com/c2bd2798f3.js"
             crossorigin="anonymous"
         ></script>
-        <title>Simple React App</title>
+        <title>YAWP App</title>
     </head>
     <body>
         <div id="root"></div>
