YAWP Url now has YAWP Screenshot

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <script
-            src="https://kit.fontawesome.com/c2bd2798f3.js"
-            crossorigin="anonymous"
-        ></script>
-        <title>YAWP App</title>
-    </head>
-    <body>
-        <div id="root"></div>
-    </body>
+
+<head>
+    <meta property="og:title" content="YAWP" />
+    <meta property="og:image" content="Yawp.png" />
+    <meta property="og:description" content="A Yelp clone about food businesses." />
+    <meta property="og:url" content="https://github.com/geoffreyjiang/yawp-app" />
+    <meta charset="utf-8" />
+    <script src="https://kit.fontawesome.com/c2bd2798f3.js" crossorigin="anonymous"></script>
+    <title>YAWP App</title>
+</head>
+
+<body>
+    <div id="root"></div>
+</body>
+
 </html>
